# Computer_Vision

./: README.md
Boat_Detection_Cascade_SVM/: BoatImage.cpp  BoatImage.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  CombinedModel.cpp  CombinedModel.h  README  datasetPreparation_utils.cpp  datasetPreparation_utils.h  project.cpp
Boat_Detection_Cascade_SVM/Cascade/: boats.info
Boat_Detection_Cascade_SVM/models/: cascade1.xml  cascade2.xml
Lab2_Camera_Calibration/: CMakeLists.txt  README  lab2.cpp
Lab3_Image_Equalization_Histograms_Filters/: CMakeLists.txt  README  filter.cpp  filter.h  lab3.cpp
Lab5_Keypoints_Descriptor_Matching/: CMakeLists.txt  README  lab5.cpp  panoramicImage.cpp  panoramicImage.h  panoramic_utils.h
